fix wrong fix